code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-Oct-2010 Jean-Marie Simonet
 # [#22970] Menu item set to "registered" does not display when superuser logs in. Thanks Elin
 # [#22959] Language switcher forbids you from reading content in a second language. No way to disable filtering. Thanks Christophe.
 
22-Oct-2010 Christophe Demko
 # [#21386] Category field includes categories user does not have permission to save to. (Elin Waring)

21-Oct-2010 Christophe Demko
 # [#22811] Get the proper model in the category controller (bill richardson)
 # [#22936] Update Hathor with permissions changes from Tracker #22529 (Andrea Tarr)
 # [#22951] PHP semi colon closing issue. (Vasanth V, bill richardson)
 # [#22519] Image caption does not work (Jean-Marie Simonnet)
 # [#22960] Sliders within sliders do not work
 # [#21300] Problem with Options Lightbox and Sessions (Omar Ramos)
 # [#22935] Automatic site language change when a user change its frontend language
 # [#22535] Missing always fulltext value in com_content article view (second time)
 # [#21399] user profile fields have numbering instead of filed names (Elin Waring, Mathavan Jeyadev)

20-Oct-2010 Andrew Eddie
 # Fixed issue [#22251] params field in table #__template_styles too small (Jason D'Souza, Bill Richardson, Christophe Demko).

19-Oct-2010 Andrew Eddie
 # Fixed issue [#21635] fail to copy menu item (Brian Teeman, Mathavan Jeyadev, Jean-Marie Simonet, Louis Landry).

-------------------- 1.6.0 Beta12 Release [18-Oct-2010] ------------------

18-Oct-2010 Andrew Eddie
 # Reverting changes in [#22659] (causing very annoying screen flicker).

18-Oct-2010 Christophe Demko
 # [#22802] Contact category feed is blank (Elin Waring)
 # [#22918] install file not working when using method "update" (marius van rijnsoever)
 # [#21345] Form field Select list does not handle <optgroup>
 # Fix JHtmlSelect class